Version 6.0 alpha: (12 Feb 2004)
	* simbot.pl
	   - We now exit the POE event loop in a way that lets us quit IRC
	     without doing the famous "EOF from client."
	   - New configuration option to make bot prompt for a quit message
	     on an interrupt signal, and to set a default quit message if
	     prompting is off.

Version 6.0 alpha: (11 Feb 2004)

	* simbot.pl:
	   - Context is now detected and a sentence is generated from the
	     middle outward to (possibly) end up on-topic. An interesting
	     word is chosen from the original message based on a scoring
	     system that can be extended through query_word_score callback.
	   - New method for storing the database in memory (desperately
	     needed to eliminate very slow scoring of interesting words).
	     This new method also speeds up sentence generation a great
	     deal, though it will use a bit more memory.
	* plugins/seen.pl:
	   - We now see topic changes and channel notices.

Version 6.0 alpha: (22 Dec 2003)

	* simbot.pl:
	   - A lot of code has been cleaned up and many core functions were
	     renamed for consistency.  A lot more debug information has been
	     added to verbosity level 4.
	   - Added: all planned events are now implemented and comments
	     document the parameters they should each deliver to callbacks.
	   - Added: a model now exists for services plugins.  Undernet is
	     the default and only plugin currently.  Only one services
	     plugin may load and its package name will be:
	       SimBot::plugin::services::pluginid
	     The plugin to load will be specified in the config.pl file.
	     If none is specified, the bot will not use any services features.
	     Anyone that wishes to implement a services plugin for ChanServ
	     would be welcome to do so.
	   - Added: plugins may now add items to lists, with a new case that
	     allows them to push nicknames onto an "ISON" list to poll for
	     whether a nickname is currently on IRC.
	* config.default.pl: