@@ -20,12 +20,12 @@ package SimBot::plugin::todo;
 
 @todo = (
 	 "1) %delete: allow users to delete words used less than x times",
-	 "2) %recap: allow users to request scrollback of up to x lines",
+	 "2) %recap: handle more events, including text from self to channel",
 	 "3) detect and remove orphaned and dead end words",
-	 "4) perform automatic perform database backups",
+	 "4) perform automatic database backups",
 	 "--- Increment version to 6.0 beta (then final) here ---",
 	 "5) eventually recognize the possibility for joining 2+ channels",
-	 "6) allow for other media than IRC to be used (connection plugins)",
+	 "6) allow for media other than IRC to be used (connection plugins)",
 	 );
 
 # PRINT_TODO: Prints todo list privately to the user.
